src/test/fixtures/syntax-error/without-comma.hp
import LatticesDeclaration;

main =  
  ALLOW 
  EXCEPT {
    DENY {
        Actors: Bob
        Resources: EMAIL
        Actions: Deletes
    }
    
  };